crates/tokio-otp/tests/ui/topology/incomplete_factories.rs
use tokio_otp::{Actor, ActorContext, ActorResult, Topology};

struct Worker;

impl Actor for Worker {
    type Msg = ();

    async fn handle(&mut self, (): (), _: &ActorContext<()>) -> ActorResult {
        Ok(())
    }
}

#[derive(Topology)]
struct Application {
    first: Worker,
    second: Worker,
}

fn main() {
    Application::graph(|_| ApplicationFactories { first: || Worker }).unwrap();
}
